--- a/src/frontend/src/app/search-tree/search-tree.component.html
+++ b/src/frontend/src/app/search-tree/search-tree.component.html
@@ -1,32 +1,23 @@
 
 
 <div class="mb-4 border-b border-gray-200 dark:border-gray-700">
-  <ul class="flex flex-wrap -mb-px text-sm font-medium text-center" id="default-tab" data-tabs-toggle="#default-tab-content" role="tablist">
-    <li class="me-2" role="presentation">
-      <button class="inline-block p-4 border-b-2 rounded-t-lg" id="profile-tab" data-tabs-target="#breadth-first" type="button" role="tab" aria-controls="profile" aria-selected="false">Breadth-First-Search</button>
-    </li>
-    <li class="me-2" role="presentation">
-      <button class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="dashboard-tab" data-tabs-target="#dashboard" type="button" role="tab" aria-controls="dashboard" aria-selected="false">Dashboard</button>
-    </li>
-    <li class="me-2" role="presentation">
-      <button class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="settings-tab" data-tabs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">Settings</button>
-    </li>
-    <li role="presentation">
-      <button class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="contacts-tab" data-tabs-target="#contacts" type="button" role="tab" aria-controls="contacts" aria-selected="false">Contacts</button>
+  <ul class="flex flex-wrap -mb-px text-sm font-medium text-center" id="tree-tab" data-tabs-toggle="#tree-tab-content" role="tablist">
+    <li *ngFor="let search of searchAlgorithms" class="me-2" role="presentation">
+      <button
+              class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300"
+              id="{{ search}}-tab" [attr.data-tabs-target]="'#' + search" type="button" role="tab"
+              [attr.aria-controls]="search" aria-selected="false">
+        {{ search }}
+      </button>
     </li>
   </ul>
 </div>
-<div id="default-tab-content-2">
-  <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="breadth-first" role="tabpanel" aria-labelledby="profile-tab">
-    <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Profile tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.</p>
-  </div>
-  <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
-    <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Dashboard tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.</p>
-  </div>
-  <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="settings" role="tabpanel" aria-labelledby="settings-tab">
-    <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Settings tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.</p>
-  </div>
-  <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="contacts" role="tabpanel" aria-labelledby="contacts-tab">
-    <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Contacts tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.</p>
+<div id="tree-tab-content">
+  <div *ngFor="let search of searchAlgorithms" class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800"
+       id="{{ search }}" role="tabpanel" [attr.aria-labelledby]="search + '-tab'">
+    <p class="text-sm text-gray-500 dark:text-gray-400">
+      This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">{{ search }} tab's associated content</strong>.
+      Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.
+    </p>
   </div>
 </div>
