--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="flex flex-col sm:flex-row gap-10 px-4">
-    <app-search-problem class="w-full sm:w-1/2"></app-search-problem>
-    <app-search-tree class="w-full sm:w-1/2"></app-search-tree>
+    <app-search-problem [selectedProblem]="selectedProblem" [selectedAlgorithm]="selectedAlgorithm" (problemChange)="onProblemChange($event)" class="w-full sm:w-1/2"></app-search-problem>
+    <app-search-tree [selectedProblem]="selectedProblem" [selectedAlgorithm]="selectedAlgorithm" (algorithmChange)="onAlgorithmChange($event)" class="w-full sm:w-1/2"></app-search-tree>
 </div>
