--- a/src/frontend/src/app/search-problem/search-problem.component.html
+++ b/src/frontend/src/app/search-problem/search-problem.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="mb-4 border-b border-gray-200 dark:border-gray-700">
+<div #problemTab class="mb-4 border-b border-gray-200 dark:border-gray-700">
   <ul class="flex flex-wrap -mb-px text-sm font-medium text-center" id="problem-tab" data-tabs-toggle="#problem-tab-content" role="tablist">
     <li *ngFor="let problem of searchProblems"  class="me-2" role="presentation">
       <button
@@ -17,6 +17,6 @@
   <button disabled type="button" class="text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Solution</button>
   <div *ngFor="let problem of searchProblems" class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800"
        id="{{ problem }}" role="tabpanel" [attr.aria-labelledby]="problem + '-tab'">
-      <app-coordinate-system></app-coordinate-system>
   </div>
+  <app-coordinate-system [selectedAlgorithm]="selectedAlgorithm"></app-coordinate-system>
 </div>
