--- a/src/frontend/src/app/search-tree/search-tree.component.html
+++ b/src/frontend/src/app/search-tree/search-tree.component.html
@@ -2,7 +2,7 @@
 
 <div #treeTab class="mb-4 border-b border-gray-200 dark:border-gray-700">
   <ul class="flex flex-wrap -mb-px text-sm font-medium text-center" id="tree-tab" data-tabs-toggle="#tree-tab-content" role="tablist">
-    <li *ngFor="let search of searchAlgorithms" class="me-2" role="presentation">
+    <li *ngFor="let search of searchAlgorithmValues" class="me-2" role="presentation">
       <button
               class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300"
               id="{{ search}}-tab" [attr.data-tabs-target]="'#' + search" type="button" role="tab"
@@ -16,7 +16,7 @@
   <button disabled type="button" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Frontier</button>
   <button disabled type="button" class="text-white bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Explored</button>
   <button disabled type="button" class="text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Solution</button>
-  <div *ngFor="let search of searchAlgorithms" class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800 h-[90vh]"
+  <div *ngFor="let search of searchAlgorithmValues" class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800 h-[90vh]"
        id="{{ search }}" role="tabpanel" [attr.aria-labelledby]="search + '-tab'">
 
     <div class="text-sm text-gray-500 dark:text-gray-400 h-full relative">
@@ -25,15 +25,7 @@
               layout="dagre"
               [links]="this.links"
               [nodes]="this.nodes"
-              (select)="onNodeSelect($event)"
       >
-<!--        <ng-template #defsTemplate>-->
-<!--          <svg:marker id="arrow" viewBox="0 -5 10 10" refX="8" refY="0" markerWidth="4" markerHeight="4" orient="auto">-->
-<!--            <svg:path d="M0,-5L10,0L0,5" class="arrow-head" />-->
-<!--          </svg:marker>-->
-<!--        </ng-template>-->
-
-
         <ng-template #nodeTemplate let-node>
           <svg:g
             class="node"
