--- a/src/frontend/src/app/search-problem/search-problem.component.html
+++ b/src/frontend/src/app/search-problem/search-problem.component.html
@@ -18,5 +18,6 @@
   <div *ngFor="let problem of searchProblems" class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800"
        id="{{ problem }}" role="tabpanel" [attr.aria-labelledby]="problem + '-tab'">
     <app-coordinate-system *ngIf="problem==='Pathfinding'" [selectedAlgorithm]="selectedAlgorithm"></app-coordinate-system>
+    <app-maze *ngIf="problem==='Maze'"></app-maze>
   </div>
 </div>
