""Mobile Friendly"" (Scrolling for overflow now)

--- a/src/frontend/src/app/search-problem/maze/maze.component.html
+++ b/src/frontend/src/app/search-problem/maze/maze.component.html
@@ -1,17 +1,20 @@
-<svg [attr.width]="width" [attr.height]="height" style="background-color:#f0f0f0;">
+<div class="w-full overflow-auto">
+  <svg [attr.width]="width" [attr.height]="height" style="background-color:#f0f0f0;">
 
-  <!-- Grid lines (optional) -->
-  <g>
-    <ng-container *ngFor="let myLine of gridLines">
-      <line [attr.x1]="myLine.x1" [attr.y1]="myLine.y1" [attr.x2]="myLine.x2" [attr.y2]="myLine.y2" stroke="#ddd" />
-    </ng-container>
-  </g>
+    <!-- Grid lines (optional) -->
+    <g>
+      <ng-container *ngFor="let myLine of gridLines">
+        <line [attr.x1]="myLine.x1" [attr.y1]="myLine.y1" [attr.x2]="myLine.x2" [attr.y2]="myLine.y2" stroke="#ddd" />
+      </ng-container>
+    </g>
 
-<!--  Example Axis Labels-->
-<!--  <text [attr.x]="width - 20" [attr.y]="yCenter - 10" font-size="10">X</text>-->
-<!--  <text [attr.x]="xCenter + 10" [attr.y]="15" font-size="10">Y</text>-->
+  <!--  Example Axis Labels-->
+  <!--  <text [attr.x]="width - 20" [attr.y]="yCenter - 10" font-size="10">X</text>-->
+  <!--  <text [attr.x]="xCenter + 10" [attr.y]="15" font-size="10">Y</text>-->
 
-<!--  &lt;!&ndash; A filled square on a grid block &ndash;&gt;-->
-  <rect *ngFor="let square of squares" [attr.x]="25 + (square.x * 25)" [attr.y]="25 + (square.y * 25)" [attr.width]="25" [attr.height]="25" [attr.fill]="'#444444'" />
-  <rect *ngFor="let square of squares" [attr.x]="25 + (square.x * 25) + 1" [attr.y]="25 + (square.y * 25) + 1" [attr.width]="23" [attr.height]="23" [attr.fill]="square.color" />
-</svg>
+  <!--  &lt;!&ndash; A filled square on a grid block &ndash;&gt;-->
+    <rect *ngFor="let square of squares" [attr.x]="25 + (square.x * 25)" [attr.y]="25 + (square.y * 25)" [attr.width]="25" [attr.height]="25" [attr.fill]="'#444444'" />
+    <rect *ngFor="let square of squares" [attr.x]="25 + (square.x * 25) + 1" [attr.y]="25 + (square.y * 25) + 1" [attr.width]="23" [attr.height]="23" [attr.fill]="square.color" />
+  </svg>
+</div>
+
