--- a/src/frontend/src/app/search-tree/search-tree.component.html
+++ b/src/frontend/src/app/search-tree/search-tree.component.html
@@ -13,9 +13,9 @@
   </ul>
 </div>
 <div id="tree-tab-content">
-  <button disabled type="button" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Frontier</button>
-  <button disabled type="button" class="text-white bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Explored</button>
-  <button disabled type="button" class="text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Solution</button>
+  <button disabled type="button" class="text-white bg-frontier hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Frontier</button>
+  <button disabled type="button" class="text-white bg-explored hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Explored</button>
+  <button disabled type="button" class="text-white bg-solution hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Solution</button>
   <div *ngFor="let search of searchAlgorithmValues" class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800 h-[90vh]"
        id="{{ search }}" role="tabpanel" [attr.aria-labelledby]="search + '-tab'">
 
