--- a/src/frontend/src/app/search-problem/maze/maze.component.html
+++ b/src/frontend/src/app/search-problem/maze/maze.component.html
@@ -1,3 +1,27 @@
+<div class="p-4 w-max mx-auto rounded-lg">
+  <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
+    <div>
+      <label for="mazeSize" class="block text-sm font-medium text-gray-700">Maze Size</label>
+      <input
+        type="number"
+        id="mazeSize"
+        class="mt-1 block w-full border-explored rounded-md shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200"
+        placeholder="21"
+        [(ngModel)]="mazeSize"
+      />
+    </div>
+    <div class="flex items-end">
+      <button
+        type="button"
+        class="w-full bg-frontier text-white py-2 px-4 rounded-md shadow hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300"
+        (click)="updateProblem()"
+      >
+        Search
+      </button>
+    </div>
+  </div>
+</div>
+
 <div class="w-full overflow-auto">
   <svg [attr.width]="width" [attr.height]="height" style="background-color:#f0f0f0;">
     <!--    Grid-->
@@ -8,7 +32,7 @@
     </g>
 
     <!--    Frontier, Explored, Solution, Walls-->
-    <rect *ngFor="let square of squares" [attr.x]="25 + (square.x * 25)" [attr.y]="25 + (square.y * 25)" [attr.width]="25" [attr.height]="25" [attr.fill]="'#444444'" />
+    <rect *ngFor="let square of squares" [attr.x]="25 + (square.x * 25)" [attr.y]="25 + (square.y * 25)" [attr.width]="25" [attr.height]="25" [attr.fill]="'#000000'" />
     <rect *ngFor="let square of squares" [attr.x]="25 + (square.x * 25) + 1" [attr.y]="25 + (square.y * 25) + 1" [attr.width]="23" [attr.height]="23" [attr.fill]="square.color" />
   </svg>
 </div>
